--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0"
   },
