--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   },
   "homepage": "https://github.com/rashed370/nodejs-express-btrs-s1920#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0"
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "sequelize-cli": "^5.5.1"
   }
 }
