--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "mysql2": "^2.1.0",
+    "node-datetime": "^2.1.2",
     "sequelize": "^5.21.4"
   },
   "devDependencies": {
