--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
-    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "md5": "^2.2.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "node-datetime": "^2.1.2",
     "sequelize": "^5.21.4"
